[package]
name = "fj-plugins"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
fj = { git = "https://github.com/hannobraun/Fornjot" }
once_cell = "1.13.0"
thiserror = "1.0.31"

[target.'cfg(target_family = "wasm")'.dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
tracing-subscriber = "0.3.14"
chrono = "0.4.19"
