[package]
name = "cuboid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.58"
fj = { git = "https://github.com/hannobraun/Fornjot" }
fj-plugins = { version = "0.1.0", path = "../../crates/plugins" }
thiserror = "1.0.31"

[dev-dependencies]
fj-host = { git = "https://github.com/hannobraun/Fornjot" }
